--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+clap = { version = "4.3.0", features = ["derive"] }
 env_logger = "0.10.0"
 hcl-rs = "0.13.3"
 log = "0.4.17"
